{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 16,
  "lineage": "76c42a8d-04cb-c490-ab68-478bb5bf5d60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0490d2192419a1a22",
            "arn": "arn:aws:ec2:us-east-1:866934333672:elastic-ip/eipalloc-0490d2192419a1a22",
            "domain": "vpc",
            "id": "eipalloc-0490d2192419a1a22",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-88-149-91.compute-1.amazonaws.com",
            "public_ip": "54.88.149.91",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "eipalloc-0490d2192419a1a22",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:internet-gateway/igw-0bc8b8e2bdfcacb88",
            "id": "igw-0bc8b8e2bdfcacb88",
            "owner_id": "866934333672",
            "region": "us-east-1",
            "tags": {
              "Name": "ha-project-igw"
            },
            "tags_all": {
              "Name": "ha-project-igw"
            },
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "igw-0bc8b8e2bdfcacb88",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0490d2192419a1a22",
            "association_id": "eipassoc-08e60320faee54362",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0feef4d60778b0542",
            "network_interface_id": "eni-0769a69b8cdcc9652",
            "private_ip": "10.0.1.51",
            "public_ip": "54.88.149.91",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0257f3e5768deee51",
            "tags": {
              "Name": "ha-project-nat-gateway"
            },
            "tags_all": {
              "Name": "ha-project-nat-gateway"
            },
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "nat-0feef4d60778b0542",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03c79e1128b9490f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0feef4d60778b0542",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03c79e1128b9490f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03c79e1128b9490f6"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:route-table/rtb-03c79e1128b9490f6",
            "id": "rtb-03c79e1128b9490f6",
            "owner_id": "866934333672",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "ha-project-private-rt"
            },
            "tags_all": {
              "Name": "ha-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "rtb-03c79e1128b9490f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:route-table/rtb-08cb917e8ccac8b9d",
            "id": "rtb-08cb917e8ccac8b9d",
            "owner_id": "866934333672",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc8b8e2bdfcacb88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "rtb-08cb917e8ccac8b9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0684ad3fcc1571fed",
            "region": "us-east-1",
            "route_table_id": "rtb-03c79e1128b9490f6",
            "subnet_id": "subnet-05b269e84d94c661e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "rtbassoc-0684ad3fcc1571fed",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03af7016c96e26611",
            "region": "us-east-1",
            "route_table_id": "rtb-03c79e1128b9490f6",
            "subnet_id": "subnet-0c7b9f295daf884e6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "rtbassoc-03af7016c96e26611",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02915723d389f03a6",
            "region": "us-east-1",
            "route_table_id": "rtb-08cb917e8ccac8b9d",
            "subnet_id": "subnet-0257f3e5768deee51"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "rtbassoc-02915723d389f03a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be6a064208c31dfa",
            "region": "us-east-1",
            "route_table_id": "rtb-08cb917e8ccac8b9d",
            "subnet_id": "subnet-0a8c296756db9d483"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "rtbassoc-0be6a064208c31dfa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:subnet/subnet-05b269e84d94c661e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b269e84d94c661e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866934333672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "subnet-05b269e84d94c661e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:subnet/subnet-0c7b9f295daf884e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7b9f295daf884e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866934333672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-b"
            },
            "tags_all": {
              "Name": "private-subnet-b"
            },
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "subnet-0c7b9f295daf884e6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:subnet/subnet-0257f3e5768deee51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0257f3e5768deee51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866934333672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "subnet-0257f3e5768deee51",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:subnet/subnet-0a8c296756db9d483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8c296756db9d483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866934333672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-b"
            },
            "tags_all": {
              "Name": "public-subnet-b"
            },
            "vpc_id": "vpc-09e0e06fee0db1762"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "subnet-0a8c296756db9d483",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:vpc/vpc-09e0e06fee0db1762",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d30f93127c05948",
            "default_route_table_id": "rtb-05df9744c5288eaa0",
            "default_security_group_id": "sg-0c5fedd3debd4eced",
            "dhcp_options_id": "dopt-01847259dc9a6dec5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e0e06fee0db1762",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05df9744c5288eaa0",
            "owner_id": "866934333672",
            "region": "us-east-1",
            "tags": {
              "Name": "ha-project-vpc"
            },
            "tags_all": {
              "Name": "ha-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866934333672",
            "id": "vpc-09e0e06fee0db1762",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}